--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,3 @@
-altair==2.2.2
-Flask==1.0.2
-Flask-JWT-Extended==3.13.1
-flask-marshmallow==0.9.0
-Flask-Migrate==2.2.1
-Flask-RESTful==0.3.6
-Flask-SQLAlchemy==2.3.2
-numpy==1.15.2
-pandas==0.23.4
-requests==2.19.1
-SQLAlchemy==1.2.12
-Werkzeug==0.14.1
-psycopg2==2.7.5
+connexion>=1.0.97
+Flask>=0.10.1
+SQLAlchemy>=1.0.13
