--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,26 @@
-connexion>=1.5.3
-SQLAlchemy>=1.2.12
-Flask>=1.0.2
-Flask-SQLAlchemy>=2.3.2
-pandas>=0.23.4
-xlrd>=1.1.0
+certifi==2018.10.15
+chardet==3.0.4
+Click==7.0
+clickclick==1.2.2
+connexion==2.0.1
+Flask==1.0.2
+Flask-SQLAlchemy==2.3.2
+idna==2.7
+inflection==0.3.1
+itsdangerous==1.1.0
+Jinja2==2.10
+jsonschema==2.6.0
+MarkupSafe==1.1.0
+numpy==1.15.4
+openapi-spec-validator==0.2.4
+pandas==0.23.4
+python-dateutil==2.7.5
+pytz==2018.7
+PyYAML==3.13
+requests==2.20.0
+six==1.11.0
+SQLAlchemy==1.2.13
+swagger-ui-bundle==0.0.2
+urllib3==1.24.1
+Werkzeug==0.14.1
+xlrd==1.1.0
